# docs-mcp

./: .env  CLAUDE.md  Cargo.toml  Justfile  LICENSE  PROMPT_PLAN.md  README.md  SPEC.md  TODO.md
.claude/commands/: task-update.md
.github/: dependabot.yml
.sqlx/: test.db
benches/: chunking.rs  extraction.rs  testpage_sqlx_any.html
src/: commands.rs  lib.rs  main.rs
src/config/: interactive.rs  mod.rs  settings.rs  tests.rs
src/config/interactive/: mod.rs  tests.rs
src/config/settings/: mod.rs  tests.rs
src/crawler/: extractor.rs  mod.rs  robots.rs  tests.rs
src/crawler/browser/: mod.rs  tests.rs
src/crawler/extractor/: mod.rs  tests.rs
src/crawler/robots/: mod.rs  tests.rs
src/database/: mod.rs
src/database/lancedb/: mod.rs  tests.rs  vector_store.rs
src/database/lancedb/vector_store/: mod.rs  tests.rs
src/database/sqlite/: mod.rs  models.rs  queries.rs  tests.rs
src/database/sqlite/migrations/: 001_initial_schema.sql  002_add_index_url.sql
src/database/sqlite/models/: mod.rs  tests.rs
src/database/sqlite/queries/: mod.rs  tests.rs
src/embeddings/: chunking.rs  mod.rs  ollama.rs
src/embeddings/chunking/: mod.rs  tests.rs
src/embeddings/ollama/: mod.rs  tests.rs
src/indexer/: consistency.rs  mod.rs  tests.rs
src/indexer/consistency/: mod.rs  tests.rs
src/indexer/queue/: mod.rs  tests.rs
src/mcp/: errors.rs  mod.rs  protocol.rs  server.rs  tests.rs  tools.rs  validation.rs
src/turndown/: collapse_whitespace.rs  mod.rs  utilities.rs
src/turndown/node/: mod.rs  tests.rs
src/turndown/root_node/: mod.rs  tests.rs
src/turndown/rules/: mod.rs  tests.rs
tests/: integration_browser.rs  integration_crawler.rs  integration_indexer.rs  integration_lancedb.rs  integration_ollama.rs  integration_tests.rs  mcp_integration.rs
